<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="name_field_empty">Name can\'t be empty</string>

    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="or">OR</string>
    <string name="sign_up_with_email">Sign Up With Email</string>

   <!--Sign up-->
    <string name="name_field_hint">Enter your full name</string>
    <string name="choose_password_field_hint">Choose your password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="login_with_email">Login With Email</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <!--posts-->
    <string name="post_like_label">%1d Likes</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>

    <!--Edit Profile-->
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_profile_picture">Choose your profile picture</string>
    <string name="please_try_latter">An error occurred please try again latter</string>
    <string name="saving_profile">Saving Profile Please wait</string>
    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

</resources>
